# synapse

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  METRICS.md  Makefile  README.md  docker-compose.test.yml  example_config.yaml  example_config_2.yaml  example_config_ingest_router.yaml  example_config_locator.yaml  example_config_locator_gcs.yaml  example_config_proxy.yaml
.github/workflows/: arm64-bench.yml  build-docker-image.yml  ci.yml  multiarch-build-workflow.yml
devservices/: config.yml  devservices-relay-credentials.json  ingest-router.yaml  proxy.yaml
ingest-router/: Cargo.toml  README.md
ingest-router/src/: api.rs  auth.rs  config.rs  errors.rs  executor.rs  fanout_handler.rs  forwarding_handler.rs  handler.rs  http.rs  ingest_router_service.rs  lib.rs  locale.rs  locality.rs  metrics_defs.rs  relay_project_config_handler.rs  router.rs  routing.rs  testutils.rs
ingest-router/src/api/: any_cell_handler.rs  health.rs  project_config.rs  public_keys.rs  register_challenge.rs  register_response.rs  utils.rs
ingest-router/src/project_config/: handler.rs  mod.rs  protocol.rs  splitter.rs
ingest-router/src/relay_project_config_handler/: merger.rs  mod.rs  protocol.rs  splitter.rs  task_executor.rs
locator/: Cargo.toml  README.md
locator/src/: api.rs  backup_routes.rs  client.rs  config.rs  control_plane.rs  cursor.rs  lib.rs  locator.rs  main.rs  metrics_defs.rs  negative_cache.rs  org_cell_fetching.rs  org_to_cell_mapping.rs  testutils.rs  types.rs
proxy/: Cargo.toml  README.md  example_config.yaml
proxy/src/: admin_service.rs  config.rs  errors.rs  headers.rs  lib.rs  locator.rs  main.rs  metrics_defs.rs  proxy.rs  proxy_service.rs  resolvers.rs  route_actions.rs  rules_engine.rs  service.rs  upstreams.rs  utils.rs
scripts/: echo_server.py  mock_control_api.py  mock_relay_api.py  pre-commit
shared/: Cargo.toml  README.md
shared/metrics/: README.md  metrics.rs
shared/routing/: Cargo.toml
shared/routing/src/: lib.rs
shared/src/: admin_service.rs  http.rs  lib.rs  metrics.rs  metrics_defs.rs
synapse/: Cargo.toml  config.rs  entrypoint.rs
synapse/src/: config.rs  healthcheck.rs  main.rs
