[workspace]
resolver = "3"
members = ["synapse", "locator", "proxy", "ingest-router"]
default-members = ["synapse"]

[workspace.dependencies]
metrics = "0.24.2"
metrics-exporter-statsd = "0.9.0"
reqwest = { version = "0.12.23", features = ["json"] }
sentry = { version = "0.45.0", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3"
thiserror = "2.0.16"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5"
