[workspace]
resolver = "3"
members = ["synapse", "locator", "proxy", "ingest-router", "shared"]
default-members = ["synapse"]

[workspace.dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
metrics = "0.24.2"
metrics-exporter-statsd = "0.9.0"
sentry = { version = "0.45.0", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3"
thiserror = "2.0.16"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5"
