[workspace]
resolver = "3"
members = ["synapse", "locator", "proxy", "ingest-router", "shared"]
default-members = ["synapse"]

[workspace.dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
metrics = "0.24.2"
metrics-exporter-statsd = "0.9.0"
reqwest = { version = "0.12.23", features = ["json"] }
sentry = { version = "0.45.0", features = ["tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
