[package]
name = "ingest-router"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
ed25519-dalek = "2"
getrandom = "0.4.2"
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
indexmap = { workspace = true }
locator = { path = "../locator" }
metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
serde_yaml = { workspace = true }
tempfile = { workspace = true }
