[package]
name = "locator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
bincode = { version = "2.0.1", features = ["std", "serde"] }
metrics = { workspace = true }
moka = { version = "0.12.11", features = ["sync"] }
serde = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zstd = { version = "0.13.3" }

[dev-dependencies]
tempfile = { workspace = true }
