[package]
name = "locator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
axum = "0.8.4"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["std", "serde"] }
bytes = "1.9.0"
flate2 = "1.1.5"
google-cloud-storage = "1.4.0"
http = { workspace = true }
metrics = { workspace = true }
moka = { version = "0.12.11", features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
shared = { path = "../shared" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zstd = { version = "0.13.3" }

[dev-dependencies]
google-cloud-auth = "1.1.1"
tempfile = { workspace = true }
