[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { workspace = true }
hyper-util = { version = "0.1.17", features = ["full"] }
locator = { path = "../locator" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
