[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
http-body-util = { workspace = true}
hyper = { workspace = true }
hyper-util = { workspace = true }
locator = { path = "../locator" }
serde = { workspace = true }
shared = { path = "../shared" }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5.2", features = ["util"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
