[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
http = { workspace = true }
http-body-util = { workspace = true}
hyper = { workspace = true }
hyper-util = { workspace = true }
locator = { path = "../locator" }
reqwest = { workspace = true }
serde = { workspace = true }
shared = { path = "../shared" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
