[package]
name = "synapse"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
locator = { path = "../locator" }
proxy = { path = "../proxy" }
sentry = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
